--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -58,6 +58,18 @@
   }
 
   .gpt3__blog-container_groupA .gpt3__blog-container_article {
-    width: 48%;
+    width: 100%;
+  }
+
+  .gpt3__blog-heading h1 {
+    font-size: 46px;
+    line-height: 52px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .gpt3__blog-heading h1 {
+    font-size: 34px;
+    line-height: 42px;
   }
 }
